--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,7 @@ body{
     margin: 10px auto;
     padding: 0px 20px;
 }
-.searchTerm {
+.search__input {
     width: 100%;
     max-width: 650px;
     border: 1px solid #5c5c5c;
@@ -42,10 +42,10 @@ body{
     color: #b9b9b9;
     font-size: 20px;
   }
-.searchTerm:focus{
+.search__input:focus{
     color: #ac53f2;
   }
-.searchButton {
+.search__button {
     width: 80px;
     height: 52px;
     border: 1px solid #ac53f2;
